--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.almondtools</groupId>
-	<artifactId>iit</artifactId>
+	<artifactId>invitroderivatives</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<url>https://github.com/almondtools/xrayinterface</url>
@@ -25,9 +25,9 @@
 		</developer>
 	</developers>
 	<scm>
-		<connection>scm:git:git@github.com:almondtools/iit.git</connection>
-		<developerConnection>scm:git:git@github.com:almondtools/iit.git</developerConnection>
-		<url>git@github.com:almondtools/iit.git</url>
+		<connection>scm:git:git@github.com:almondtools/invitroderivatives.git</connection>
+		<developerConnection>scm:git:git@github.com:almondtools/invitroderivatives.git</developerConnection>
+		<url>git@github.com:almondtools/invitroderivatives.git</url>
 		<tag>HEAD</tag>
 	</scm>
 	<distributionManagement>
