--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.github.almondtools</groupId>
+			<artifactId>conmatch</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.ow2.asm</groupId>
 			<artifactId>asm-debug-all</artifactId>
 			<version>5.0.4</version>
