[maven-release-plugin] prepare release testrecorder-0.1.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.almondtools</groupId>
 	<artifactId>testrecorder</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.1.0</version>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<url>https://github.com/almondtools/testrecorder</url>
 
@@ -28,7 +27,7 @@
 		<connection>scm:git:git@github.com:almondtools/testrecorder.git</connection>
 		<developerConnection>scm:git:git@github.com:almondtools/testrecorder.git</developerConnection>
 		<url>git@github.com:almondtools/testrecorder.git</url>
-		<tag>HEAD</tag>
+		<tag>testrecorder-0.1.0</tag>
 	</scm>
 	<distributionManagement>
 		<snapshotRepository>
