--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.almondtools</groupId>
 	<artifactId>testrecorder</artifactId>
-	<version>0.1.1</version>
+	<version>0.1.2-SNAPSHOT</version>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<url>https://github.com/almondtools/testrecorder</url>
 
@@ -27,7 +27,7 @@
 		<connection>scm:git:git@github.com:almondtools/testrecorder.git</connection>
 		<developerConnection>scm:git:git@github.com:almondtools/testrecorder.git</developerConnection>
 		<url>git@github.com:almondtools/testrecorder.git</url>
-		<tag>testrecorder-0.1.1</tag>
+		<tag>HEAD</tag>
 	</scm>
 	<distributionManagement>
 		<snapshotRepository>
