--- a/pom.xml
+++ b/pom.xml
@@ -74,9 +74,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.10.19</version>
-			<scope>test</scope>
+			<artifactId>mockito-core</artifactId>
+			<version>2.7.22</version>
 		</dependency>
 	</dependencies>
 	<build>
