--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,6 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>net.amygdalum</groupId>
-			<artifactId>xrayinterface</artifactId>
-			<version>0.3.0</version>
-		</dependency>
-		<dependency>
 			<groupId>org.ow2.asm</groupId>
 			<artifactId>asm-debug-all</artifactId>
 			<version>5.0.4</version>
@@ -55,26 +50,38 @@
 			<artifactId>ST4</artifactId>
 			<version>4.0.8</version>
 		</dependency>
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-library</artifactId>
-			<version>1.3</version>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-		</dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+        <dependency>
+            <groupId>net.amygdalum</groupId>
+            <artifactId>xrayinterface</artifactId>
+            <version>0.3.0</version>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>com.github.almondtools</groupId>
 			<artifactId>conmatch</artifactId>
-			<version>0.1.11</version>
+			<version>0.1.12</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<version>2.7.22</version>
+            <scope>test</scope>
 		</dependency>
 	</dependencies>
 	<build>
