updating agent settings

--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,9 @@
 								</manifest>
 								<manifestEntries>
 									<Premain-Class>net.amygdalum.testrecorder.TestRecorderAgent</Premain-Class>
+                                    <Agent-Class>net.amygdalum.testrecorder.TestRecorderAgent</Agent-Class>
+									<Can-Redefine-Classes>true</Can-Redefine-Classes>
+                                    <Can-Retransform-Classes>true</Can-Retransform-Classes>
 								</manifestEntries>
 							</archive>
 						</configuration>
