--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-migrationsupport</artifactId>
+			<version>5.0.2</version>
+		</dependency>
+		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
 			<version>3.8.0</version>
@@ -222,10 +227,10 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.19.1</version>
 				<configuration>
-				    <testSourceDirectory>${basedir}/src/main/java/</testSourceDirectory>
-                    <testSourceDirectory>${basedir}/src/test/java/</testSourceDirectory>
-                    <testClassesDirectory>${project.build.directory}/classes/</testClassesDirectory>
-					
+					<testSourceDirectory>${basedir}/src/main/java/</testSourceDirectory>
+					<testSourceDirectory>${basedir}/src/test/java/</testSourceDirectory>
+					<testClassesDirectory>${project.build.directory}/classes/</testClassesDirectory>
+
 				</configuration>
 				<dependencies>
 					<dependency>
