--- a/pom.xml
+++ b/pom.xml
@@ -232,10 +232,10 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.19.1</version>
 				<configuration>
-					<testSourceDirectory>${basedir}/src/main/java/</testSourceDirectory>
-					<testSourceDirectory>${basedir}/src/test/java/</testSourceDirectory>
-					<testClassesDirectory>${project.build.directory}/classes/</testClassesDirectory>
-
+					<includes>
+						<include>**/*Test.java</include>
+						<include>**/*Tests.java</include>
+					</includes>
 				</configuration>
 				<dependencies>
 					<dependency>
