--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,7 @@
 		</dependency>
 		<dependency>
 			<groupId>net.amygdalum</groupId>
-			<artifactId>assertj-conventions</artifactId>
+			<artifactId>assertj-extensions</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
