--- a/pom.xml
+++ b/pom.xml
@@ -205,7 +205,10 @@
 									<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
 								</manifest>
 								<manifestEntries>
-									<Premain-Class>net.amygdalum.testrecorder.TestRecorderAgent</Premain-Class>
+                                    <Premain-Class>net.amygdalum.testrecorder.TestRecorderAgent</Premain-Class>
+                                    <Agent-Class>net.amygdalum.testrecorder.TestRecorderAgent</Agent-Class>
+                                    <Can-Redefine-Classes>true</Can-Redefine-Classes>
+                                    <Can-Retransform-Classes>true</Can-Retransform-Classes>
 								</manifestEntries>
 							</archive>
 						</configuration>
