--- a/testrecorder-agent/pom.xml
+++ b/testrecorder-agent/pom.xml
@@ -10,7 +10,6 @@
 		<artifactId>testrecorder</artifactId>
 		<version>0.5.0-SNAPSHOT</version>
 	</parent>
-	<groupId>net.amygdalum</groupId>
 	<artifactId>testrecorder-agent</artifactId>
 	<name>${project.groupId}:${project.artifactId}</name>
 
@@ -116,14 +115,12 @@
 				<version>2.2</version>
 				<executions>
 					<execution>
-						<id>make-assembly-with-dependencies</id>
+						<id>make-agent</id>
 						<phase>package</phase>
 						<configuration>
-							<descriptorRefs>
-								<descriptorRef>jar-with-dependencies</descriptorRef>
-							</descriptorRefs>
-							<finalName>agent</finalName>
-                            <appendAssemblyId>false</appendAssemblyId>
+                            <descriptors>
+                                <descriptor>src/main/assembly/agent.xml</descriptor>
+                            </descriptors>
 							<archive>
 								<index>true</index>
 								<manifest>
@@ -143,14 +140,12 @@
 						</goals>
 					</execution>
 					<execution>
-						<id>make-assembly-without-dependencies</id>
+						<id>make-agent-no-dep</id>
 						<phase>package</phase>
 						<configuration>
 							<descriptors>
-								<descriptor>src/main/assembly/jar-without-dependencies.xml</descriptor>
+								<descriptor>src/main/assembly/agent-no-dep.xml</descriptor>
 							</descriptors>
-                            <finalName>agent-no-dep</finalName>
-                            <appendAssemblyId>false</appendAssemblyId>
 							<archive>
 								<index>true</index>
 								<manifest>
