--- a/testrecorder-runtime/pom.xml
+++ b/testrecorder-runtime/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>net.amygdalum</groupId>
 		<artifactId>testrecorder</artifactId>
-		<version>0.6.0-SNAPSHOT</version>
+		<version>0.6.0</version>
 	</parent>
 	<artifactId>testrecorder-runtime</artifactId>
 	<name>${project.groupId}:${project.artifactId}</name>
