--- a/testrecorder-runtime/pom.xml
+++ b/testrecorder-runtime/pom.xml
@@ -83,7 +83,7 @@
 		<dependency>
 			<groupId>net.amygdalum</groupId>
 			<artifactId>assertj-extensions</artifactId>
-			<version>0.0.4-SNAPSHOT</version>
+			<version>0.0.4</version>
 		</dependency>
 	</dependencies>
 	<build>
