--- a/testrecorder-agent/pom.xml
+++ b/testrecorder-agent/pom.xml
@@ -125,7 +125,7 @@
 		<dependency>
 			<groupId>net.amygdalum</groupId>
 			<artifactId>assertj-extensions</artifactId>
-			<version>0.0.5-SNAPSHOT</version>
+			<version>0.0.5</version>
 		</dependency>
 	</dependencies>
 	<build>
