--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,17 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<version.plugin.assembly>2.2</version.plugin.assembly>
+		<version.plugin.compiler>3.6.1</version.plugin.compiler>
+        <version.plugin.gpg>1.5</version.plugin.gpg>
+        <version.plugin.jacoco>0.7.9</version.plugin.jacoco>
+        <version.plugin.jar>3.0.2</version.plugin.jar>
+        <version.plugin.javadoc>2.9.1</version.plugin.javadoc>
+        <version.plugin.nexusstaging>1.6.3</version.plugin.nexusstaging>
+		<version.plugin.release>2.5.3</version.plugin.release>
+		<version.plugin.shade>3.2.0</version.plugin.shade>
+        <version.plugin.source>2.2.1</version.plugin.source>
+        <version.plugin.surefire>2.22.1</version.plugin.surefire>
 	</properties>
 
 	<modules>
@@ -56,7 +67,7 @@
 				<inherited>true</inherited>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.6.1</version>
+				<version>${version.plugin.compiler}</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -68,7 +79,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.7.9</version>
+				<version>${version.plugin.jacoco}</version>
 				<executions>
 					<execution>
 						<goals>
@@ -86,7 +97,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.1</version>
+				<version>${version.plugin.surefire}</version>
 				<configuration>
 					<includes>
 						<include>**/*Test.java</include>
@@ -104,7 +115,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-release-plugin</artifactId>
-						<version>2.5.3</version>
+						<version>${version.plugin.release}</version>
 						<configuration>
 							<autoVersionSubmodules>true</autoVersionSubmodules>
 							<useReleaseProfile>false</useReleaseProfile>
@@ -116,7 +127,7 @@
 					<plugin>
 						<groupId>org.sonatype.plugins</groupId>
 						<artifactId>nexus-staging-maven-plugin</artifactId>
-						<version>1.6.3</version>
+						<version>${version.plugin.nexusstaging}</version>
 						<extensions>true</extensions>
 						<configuration>
 							<serverId>ossrh</serverId>
@@ -127,7 +138,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-source-plugin</artifactId>
-						<version>2.2.1</version>
+						<version>${version.plugin.source}</version>
 						<executions>
 							<execution>
 								<id>attach-sources</id>
@@ -140,7 +151,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>2.9.1</version>
+						<version>${version.plugin.javadoc}</version>
 						<executions>
 							<execution>
 								<id>attach-javadocs</id>
@@ -153,7 +164,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.5</version>
+						<version>${version.plugin.gpg}</version>
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
