--- a/testrecorder-runtime/pom.xml
+++ b/testrecorder-runtime/pom.xml
@@ -33,11 +33,6 @@
 			<version>1.3</version>
 		</dependency>
 		<dependency>
-			<groupId>org.assertj</groupId>
-			<artifactId>assertj-core</artifactId>
-			<version>3.11.1</version>
-		</dependency>
-		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
 			<version>5.3.1</version>
@@ -73,10 +68,17 @@
 			<version>0.3.1</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.11.1</version>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>net.amygdalum</groupId>
 			<artifactId>assertj-extensions</artifactId>
 			<version>0.0.6</version>
+            <scope>test</scope>
 		</dependency>
 	</dependencies>
 	<build>
