Providing FakeIO as in the runtime module, closes #91

--- a/pom.xml
+++ b/pom.xml
@@ -54,9 +54,10 @@
 	</properties>
 
 	<modules>
-		<module>testrecorder-runtime</module>
 		<module>testrecorder-agent</module>
         <module>testrecorder-bridge</module>
+        <module>testrecorder-runtime</module>
+        <module>testrecorder-runtime-bridge</module>
 	</modules>
 	<dependencies>
    
